<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.deduyo_wage_calculator.mainOutputView">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/calcbg"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="328dp"
        android:layout_height="740dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="43dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/framebg" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/segoeuib"
        android:gravity="center"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OTOutput"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/segoeuib"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wagecalc" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/segoeuib"
        android:text="@string/type"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/name2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name2"
        app:layout_constraintTop_toBottomOf="@+id/name2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeuii"
        android:text="@string/totalWage"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/wageOutput"
        app:layout_constraintEnd_toStartOf="@+id/wageOutput"
        app:layout_constraintHorizontal_bias="0.323"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/wageOutput"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeuii"
        android:text="@string/regWage"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/regOutput"
        app:layout_constraintEnd_toStartOf="@+id/regOutput"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regOutput"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeuii"
        android:text="@string/OTWage"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/OTwageOutput"
        app:layout_constraintEnd_toStartOf="@+id/OTwageOutput"
        app:layout_constraintHorizontal_bias="0.408"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/OTwageOutput"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeuii"
        android:text="@string/hours"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/timeOutput"
        app:layout_constraintEnd_toStartOf="@+id/timeOutput"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/timeOutput"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeuii"
        android:text="@string/OT"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@+id/OTOutput"
        app:layout_constraintEnd_toStartOf="@+id/OTOutput"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/OTOutput"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/outputName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ebrima"
        android:text="@string/output"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/name2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toEndOf="@+id/name2"
        app:layout_constraintTop_toTopOf="@+id/name2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/outputType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ebrima"
        android:text="@string/output"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toEndOf="@+id/type"
        app:layout_constraintTop_toTopOf="@+id/type"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/wageOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/output"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/regOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/output"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/wageOutput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/wageOutput"
        app:layout_constraintTop_toBottomOf="@+id/wageOutput" />

    <TextView
        android:id="@+id/OTwageOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/output"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/regOutput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/regOutput"
        app:layout_constraintTop_toBottomOf="@+id/regOutput" />

    <TextView
        android:id="@+id/timeOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/output"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/OTwageOutput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/OTwageOutput"
        app:layout_constraintTop_toBottomOf="@+id/OTwageOutput" />

    <TextView
        android:id="@+id/OTOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/ebrima"
        android:text="@string/output"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/timeOutput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/timeOutput"
        app:layout_constraintTop_toBottomOf="@+id/timeOutput" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:text="@string/back"
        android:background="@color/cobalt"
        android:textSize="23sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/wagecalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeuib"
        android:text="@string/calculator"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />

</androidx.constraintlayout.widget.ConstraintLayout>